sprint-one/styles/partials/_header.scss
// HEADER
.main-header {
	display: flex;
	flex-direction: column;
	justify-content: space-evenly;
	align-items: center;
	height: 80px;
	background: $navigation-background-fill;
	color: #fff;
	@include tablet() {
		flex-direction: row;
		padding-left: 24px;
	}

	&__logo {
		margin: 0;
		padding: 12px 0;
	}

	&__nav {
		width: 100%;
		height: 50%;
		@include tablet() {
			height: 100%;
		}

		&__list {
			margin: 0;
			display: flex;
			justify-content: space-around;
			align-items: center;
			height: 100%;
		}

		&__link {
			padding-bottom: 12px;
			@include tablet() {
				padding-bottom: 0;
			}
		}

		&__item {
			display: flex;
			justify-content: center;
			align-items: center;
			position: relative;
			width: 50%;
			height: 100%;
			color: $text-label-style;
			font-size: 0.9rem;
			text-transform: capitalize;
			&--active {
				color: #fff;
				font-family: $font-medium;

				// white underline
				&::before {
					content: "";
					position: absolute;
					height: 4px;
					width: 100%;
					left: 0;
					bottom: 0;
					background: #fff;
				}
			}
		}
	}
}

